--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '16' 
           
       - name: Install dependencies
-        working-directory: './StarBowling' 
+        working-directory: './StrajkBowling' 
         run: npm install
 
       - name: Run tests
